# user_generator

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: workflow.yml
src/: generator.rs  loader.rs  main.rs  models.rs  writer.rs
