[package]
name = "dummy-user-generator"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "usergen"
path = "src/main.rs"

[dependencies]
# CSV読み書き
csv = "1.3"
# 乱数生成
rand = { version = "0.8", features = ["small_rng"] }
# ZIPファイル展開
zip = "0.6"
# 日付処理
chrono = { version = "0.4", features = ["serde"] }
# 並列処理
rayon = "1.10"
# エラーハンドリング
anyhow = "1.0"
# コマンドライン引数
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
